0x01-variables_if_else_while/1-last_digit.c:
st_digit.c:28:1: error: control reaches end of non-void function [-Werror=return-type]
   28 | }
      | ^
cc1: all warnings being treated as errors
